--- a/Meta-analysis_Acute.Rmd
+++ b/Meta-analysis_Acute.Rmd
@@ -31,25 +31,24 @@ library(clusterProfiler)
 library(MAST)
 library(plotly)
 library(openxlsx)
-library(ggvenn)
+library(patchwork)
+library(tibble)
 ```
 
 1. First of all, we need to prepare the three datasets for integration. One of the most important points is standarize the labels of the dataset.The different datasets are already filtered by QC metrics. (% mitochondrial < 0.2, no doublets, nCounts > 200)
 
 
-1.1 Dataset Milich loaded
+Dataset Milich 
 
 ```{r}
 matrix <- readMM("~/R/Data/Dataset1.mtx")
-barcodes <- read.delim("~/R/Data/Dataset1_barcode_metadata.tsv", header = T)
-features <- read.delim("~/R/Data/Dataset1_gene_metadata.tsv")
-metadata <- barcodes
+metadata <- read.delim("~/R/Data/metadata1.tsv", header = T)
+features <- read.delim("~/R/Data/features1.tsv")
+barcodes <- rownames(metadata)
 ```
 
-1.1.2 Prepare metadata with important columns and matrix with row/colnames
-
 ```{r}
-metadata <- metadata %>% select(nCount_RNA, nFeature_RNA, time, celltype)
+metadata <- metadata %>% dplyr::select(nCount_RNA, nFeature_RNA, time, celltype, sample_id)
 
 metadata$technology <- "scRNA"
 metadata$dataset <- "Milich_2021"
@@ -58,29 +57,28 @@ rownames(matrix) <- features$mgi_symbol
 colnames(matrix) <- rownames(barcodes)
 ```
 
-1.1.3 Create Seurat Object
-
 ```{r}
-seurat <- CreateSeuratObject(matrix,assay = "RNA", project = "Milich_2021", meta.data = metadata, , min.cells = 50, min.features = 100)
+seurat <- CreateSeuratObject(matrix,assay = "RNA", project = "Milich_2021", meta.data = metadata, min.cells = 50, min.features = 100)
 
 remove_features <- nrow(matrix) - nrow(seurat)
-remove_cells <- ncol(matrix) - nrow(seurat)
+remove_cells <- ncol(matrix) - ncol(seurat)
 
 seurat <- subset(seurat, subset = time %in% c("Uninjured", "1dpi", "7dpi"))
 
 remove_features_f <- nrow(matrix) - nrow(seurat)
 remove_cells_f <- ncol(matrix) - nrow(seurat)
 
+# Remove replicates partially enriched
+# seurat <- subset(seurat, subset = sample_id %in% c("1dpi_sample1", "7dpi_sample1", "uninj_sample1"))
+
 rm(matrix,barcodes,metadata,features)
 ```
 
-1.2.1 Dataset Single cell Atlas loaded
+Dataset Matson 2022
 
 ```{r}
 matrix2 <- matrix2 <- readRDS("~/R/Data/Dataset2.rds")
 ```
-
-1.2.2 Prepare metadata with important columns and matrix with row/colnames 
 
 ```{r}
 counts2 <- matrix2@assays[["RNA"]]@counts
@@ -109,8 +107,6 @@ metadata2$dataset <- "Matson_2022"
 
 ```
 
-1.2.3 Create Seurat Object 2
-
 ```{r}
 seurat2 <- CreateSeuratObject(counts2, assay = "RNA", project = "Matson_2022 (Single cell Atlas)", meta.data = metadata2, min.cells = 50, min.features = 100)
 
@@ -125,7 +121,7 @@ remove_cells2_f <- ncol(matrix2) - ncol(seurat2)
 rm(matrix2, counts2, metadata2)
 ```
 
-1.3.1 Dataset Tabulae Paralytica
+Dataset Skinnider_2024
 
 ```{r}
 
@@ -137,24 +133,16 @@ features3 <- read.delim("~/R/Data/features3.txt.gz", header = F)
 
 ```
 
-1.3.2 Prepare metadata with important columns and matrix with row/colnames 
 
 ```{r}
 
 colnames(matrix3) <- barcodes3$V1
 rownames(matrix3) <- features3$V1
 
-metadata3 <- metadata3[
-  (metadata3$experiment_clean == "Time course" & metadata3$label_clean == "Uninjured") | 
-  (metadata3$experiment_clean == "Injury models" & metadata3$label_clean == "Contusion"),
-]
-
 rownames(metadata3) <- metadata3$barcode
 
 matrix3 <- as(matrix3, "dgCMatrix")
 gc()
-
-filtered_matrix <- matrix3[, colnames(matrix3) %in% rownames(metadata3)]
 
 metadata3 <- metadata3 %>% rename(time = label)
 
@@ -171,10 +159,8 @@ metadata3$dataset <- "Skinnider_2024"
 
 ```
 
-1.3.3 Create Seurat Object 3
-
 ```{r}
-seurat3  <- CreateSeuratObject(filtered_matrix, assay = "RNA", project = "Skinnider_2024 (Tabulae Paralytica)",  meta.data = metadata3, min.cells = 50, min.features = 100)
+seurat3  <- CreateSeuratObject(matrix3, assay = "RNA", project = "Skinnider_2024 (Tabulae Paralytica)",  meta.data = metadata3, min.cells = 50, min.features = 100)
 
 remove_features3 <- nrow(matrix3) - nrow(seurat3)
 remove_cells3 <- ncol(matrix3) - ncol(seurat3)
@@ -199,7 +185,7 @@ paste("Features:", nrow(seurat) + nrow(seurat2) + nrow(seurat3))
 
 # Quality control of cells
 print(paste("Cells removed for QC:", remove_cells + remove_cells2 + remove_cells3))
-print(paste("Cells of other experimental conditionns:", remove_cells_f + remove_cells2_f + remove_cells3_f))
+print(paste("Cells of other experimental conditionns:", (remove_cells_f + remove_cells2_f + remove_cells3_f) - (remove_cells + remove_cells2 + remove_cells3)))
 paste("Cells:", ncol(seurat) + ncol(seurat2) + ncol(seurat3))
 
 ```
@@ -246,6 +232,9 @@ rm(matrix5, barcodes5, metadata5, features5)
 
 ```
 
+```{r}
+save.image(file = "~/R/Data/Seurats_Acute.RData")
+```
 
 Normalization
 
@@ -270,7 +259,7 @@ seurat5_norm <- seurat_list_norm[[4]]
 ```
 
 ```{r}
-rm(seurat_list, seurat, seurat2, seurat3)
+rm(seurat_list_norm, seurat, seurat2, seurat3)
 ```
 
 
@@ -338,7 +327,7 @@ umap3 <- DimPlot(seurat3_norm, split.by = "dataset", group.by = "predicted.id", 
 
 umap + umap2 + umap3
 
-ggsave("~/R/Figures/umap_bef_int_Acute.png", umap + umap2 + umap3, dpi = 1080, height = 14, width = 8)
+ggsave("~/R/Figures/UMAP_BeforeIntegration_Acute.png", umap + umap2 + umap3, dpi = 1080, height = 14, width = 8)
 
 rm(umap, umap2, umap3)
 rm(seurat2_norm, seurat_norm, seurat3_norm)
@@ -349,13 +338,14 @@ Integrate the three datasets and scale the integrated seurat object.
 ```{r}
 
 gc()
-anchors_integration <- FindIntegrationAnchors(object.list = seurat_list, dims = 1:20, verbose = TRUE, reduction = "rpca", anchor.features = features, scale = F, normalization.method = "LogNormalize")
+anchors_integration <- FindIntegrationAnchors(object.list = seurat_list, dims = 1:30, verbose = TRUE, reduction = "cca", anchor.features = features, scale = F, normalization.method = "LogNormalize", k.anchor = 50)
+
 gc()
-seurat_integrated <- IntegrateData(anchorset = anchors_integration, dims = 1:20, verbose = TRUE, normalization.method = "LogNormalize")
+seurat_integrated <- IntegrateData(anchorset = anchors_integration, dims = 1:30, verbose = TRUE, normalization.method = "LogNormalize")
 
 rm(seurat_list, anchors, anchors_integration)
 
-save.image(file = "C:\\Users\\afornies\\Downloads\\Acute_Data.RData")
+save.image(file = "~/R/Downloads/Acute_Data.RData")
 ```
 
 * Correct metadata issues
@@ -375,98 +365,19 @@ seurat_integrated@meta.data <- metadata
 
 
 ```{r}
+# Descriptive
 table(seurat_integrated$celltype)
 table(seurat_integrated$time)
-```
-
-RLE after integration
-
-```{r}
-
-set.seed(45)
-
-gene_names <- rownames(seurat_integrated[["integrated"]])
-sample_genes <- if (length(gene_names) < 5000) gene_names else sample(gene_names, 5000)
-
-cell_names <- colnames(seurat_integrated[["integrated"]])
-sample_cells <- if (length(cell_names) < 150) cell_names else sample(cell_names, 150)
-
-data <- as.matrix(GetAssayData(seurat_integrated, assay = "integrated", layer = "data"))[sample_genes, sample_cells]
-
-medians <- apply(data, 1, median)
-rle_values <- sweep(log1p(data), 1, medians, "-")
-rle_df <- melt(rle_values)
-colnames(rle_df) <- c("Gene", "Cell", "RLE")
-
-rle_df <- rle_df[is.finite(rle_df$RLE), ]
-
-y_limits <- c(-0.65,0.65)
-
-rle1 <- ggplot(rle_df, aes(x = Cell, y = RLE)) +
-  geom_boxplot(outlier.shape = NA) +
-  theme(axis.text.x = element_blank()) +
-  labs(title = "RLE plot after Integration", y = "Relative Log Expression") + ylim(y_limits)
-
-rle1
-
-ggsave("~/R/Figures/rle1_Acute.png", rle1, dpi = 1080, height = 7, width = 8)
-```
-
-RLE after integration by DATASETS
-
-```{r}
-set.seed(34)
-
-gene_names <- rownames(seurat_integrated[["integrated"]])
-sample_genes <- if (length(gene_names) < 5000) gene_names else sample(gene_names, 5000)
-
-cell_names <- colnames(seurat_integrated[["integrated"]])
-sample_cells <- if (length(cell_names) < 5000) cell_names else sample(cell_names, 5000)
-
-data <- as.matrix(GetAssayData(seurat_integrated, assay = "integrated", layer = "data"))[sample_genes, sample_cells]
-
-medians <- apply(data, 1, median)
-rle_values <- sweep(log1p(data), 1, medians, "-")
-rle_df <- reshape2::melt(rle_values)
-colnames(rle_df) <- c("Gene", "Cell", "RLE")
-
-rle_df <- rle_df[is.finite(rle_df$RLE), ]
-
-sample_metadata <- seurat_integrated@meta.data[sample_cells, ]
-rle_df$Dataset <- sample_metadata[rle_df$Cell, "dataset"]
-
-y_limits <- c(-0.2, 0.2)
-
-rle_by_dataset <- ggplot(rle_df, aes(x = Dataset, y = RLE, fill = Dataset)) +
-  geom_boxplot(outlier.shape = NA, show.legend = FALSE) + 
-  theme_minimal() +
-  theme(
-    axis.text.x = element_text(angle = 45, hjust = 1, size = 10),
-    plot.title = element_text(hjust = 0.5, face = "bold")
-  ) +
-  labs(
-    title = "RLE plot after Integration by Dataset", 
-    y = "Relative Log Expression",
-    x = NULL  #
-  ) + 
-  ylim(y_limits) +
-  scale_fill_brewer(palette = "Set3")  
-
-rle_by_dataset
-
-ggsave("~/R/Figures/rle_datasets_Acute.png", rle_by_dataset, dpi = 1080, height = 7, width = 8)
-
-```
+table(seurat_integrated$dataset)
+``` 
 
 Cell Cycle Score
 
 ```{r}
 
 cell_cycle_markers <- read.csv("~/R/Data/Mus_musculus.csv")
-s_genes <- cell_cycle_markers %>% dplyr::filter(phase == "S") %>%
-            pull("geneID")
-g2m_genes <- cell_cycle_markers %>% dplyr::filter(phase == "G2/M") %>%
-            pull("geneID")
+s_genes <- cell_cycle_markers %>% dplyr::filter(phase == "S") %>% pull("geneID")
+g2m_genes <- cell_cycle_markers %>% dplyr::filter(phase == "G2/M") %>% pull("geneID")
 s_genes <- AnnotationDbi::select(org.Mm.eg.db,
                                    keys = s_genes,
                                    keytype = "ENSEMBL",
@@ -482,8 +393,6 @@ seurat_integrated <- CellCycleScoring(seurat_integrated, g2m.features = g2m_gene
 
 UMAP after integration
 
-ScaleData is needed for PCA
-
 ```{r}
 seurat_integrated <- ScaleData(seurat_integrated)
 seurat_integrated <- RunPCA(seurat_integrated, verbose = T, dims = 1:20) 
@@ -491,14 +400,19 @@ seurat_integrated <- RunUMAP(seurat_integrated, dims = 1:20)
 
 umap <- DimPlot(seurat_integrated, split.by = "dataset", group.by = "celltype", label = T, label.size = 3) + theme(axis.text.x = element_text(angle = 60, hjust = 1, size = 9)) + labs(x = "UMAP 1", y = "UMAP 2")
 umap
-ggsave("~/R/Figures/umap_post_int_Acute.png", umap, dpi = 1080, height = 7, width = 12)
+  ggsave("~/R/Figures/UMAP_AfterIntegration_Acute.png", umap, dpi = 1080, height = 7, width = 12)
 
 celltype <- DimPlot(seurat_integrated, group.by = "celltype") + ggtitle("Celltypes")
 celltype
-ggsave("~/R/Figures/cell_post_int_Acute.png", celltype, dpi = 1080, height = 7, width = 10)
+
+dataset <- DimPlot(seurat_integrated, group.by = "dataset") + ggtitle("Datasets")
+dataset
+
+ggsave("~/R/Figures/Cells_Acute.png", celltype, dpi = 1080, height = 7, width = 10)
+ggsave("~/R/Figures/Dataset_Acute.png", dataset, dpi = 1080, height = 7, width = 10)
 ```
 
-Checking Cell Cycle Influence
+Possible covariates
 
 ```{r}
 cc_score <- DimPlot(seurat_integrated,
@@ -507,6 +421,15 @@ cc_score <- DimPlot(seurat_integrated,
         split.by = "time")
 cc_score
 ggsave("~/R/Figures/CC_Acute.png", cc_score, dpi = 1080, height = 7, width = 9)
+
+# Differences between cells in different CC Phase
+
+pca_dataset <- DimPlot(seurat_integrated,
+        reduction = "pca",
+        group.by= "dataset")
+pca_dataset
+
+ggsave("~/R/Figures/PCA_Dataset_Sub-Chronic.png", pca_dataset, dpi = 1080, height = 7, width = 9)
 ```
 
 LISI
@@ -546,7 +469,7 @@ celltype_plot <- ggplot(lisi_df, aes(x = CellType_LISI)) +
   xlim(c(1, max(lisi_df$CellType_LISI)))
 
 combined_plot <- batch_plot + celltype_plot +
-  plot_annotation(title = "Evaluación de Integración con LISI",
+  plot_annotation(title = "Evaluation of the Integration by LISI",
                   subtitle = paste("Número de células:", nrow(embeddings)))
 
 print(combined_plot)
@@ -560,25 +483,6 @@ summary_stats <- data.frame(
 
 print(summary_stats)
 
-#######################################################
-
-barcodes <- rownames(seurat_integrated@meta.data)
-
-cell_proportions <- seurat_integrated@meta.data %>%
-  group_by(dataset, time, celltype) %>%
-  summarise(count = n(), .groups = "drop") %>%
-  group_by(dataset, time) %>%
-  mutate(prop = count / sum(count)) %>%
-  select(dataset, time, celltype, prop)
-
-prop_table <- cell_proportions %>%
-  pivot_wider(names_from = celltype, values_from = prop, values_fill = 0)
-
-seurat_integrated@meta.data <- seurat_integrated@meta.data %>% left_join(prop_table, by = c("dataset", "time"))
-
-rownames(seurat_integrated@meta.data) <- barcodes
-colnames(seurat_integrated) <- barcodes
-
 ```
 
 ```{r}
@@ -588,9 +492,6 @@ seurat_integrated@meta.data$celltype <- recode(seurat_integrated@meta.data$cellt
 seurat_integrated$celltype <- recode(seurat_integrated$celltype, "Endothelial cells" = "Endothelial")
 
 seurat_integrated@meta.data$`Endothelial cells` -> seurat_integrated@meta.data$Endothelial
-
-seurat_integrated@meta.data <- seurat_integrated@meta.data %>% 
-  select(-`Endothelial cells`)
 
 
 ```
@@ -613,11 +514,12 @@ Differential expression analysis.
 FindMarkers analysis
 
 ```{r}
-cell.prop <-  unique(seurat_integrated_ME@meta.data$celltype)
+
+adjust <- c("S.Score","G2M.Score")
 
 Idents(seurat_integrated_ME) <- "time"
 
-DEG <- FindMarkers(seurat_integrated_ME,  ident.1 = "7dpi", ident.2 = "Uninjured", logfc.threshold = 0, min.pct = 0.05, test.use = "MAST", layer = "data", latent.vars = cell.prop)
+DEG <- FindMarkers(seurat_integrated_ME,  ident.1 = "7dpi", ident.2 = "Uninjured", logfc.threshold = 0, min.pct = 0.05, test.use = "MAST", layer = "data", latent.vars = adjust)
 
 DEG$Gene <- rownames(DEG)
 
@@ -631,7 +533,7 @@ ggsave("~/R/Figures/Volcano_Acute.png", volcanoplot, dpi = 1080, height = 7, wid
 
 ##############################################################################################################
 
-DEG2 <- FindMarkers(seurat_integrated_ME,  ident.1 = "1dpi", ident.2 = "Uninjured", logfc.threshold = 0, min.pct = 0.05, test.use = "MAST", layer = "data",  latent.vars = cell.prop)
+DEG2 <- FindMarkers(seurat_integrated_ME,  ident.1 = "1dpi", ident.2 = "Uninjured", logfc.threshold = 0, min.pct = 0.05, test.use = "MAST", layer = "data",  latent.vars = adjust)
 
 DEG2$Gene <- rownames(DEG2)
 
@@ -639,7 +541,7 @@ DEG2$p_val_adj <- ifelse(DEG2$p_val_adj == 0, 1e-305, DEG2$p_val_adj)
 
 volcanoplot2 <- EnhancedVolcano(DEG2, lab = rownames(DEG2), x = "avg_log2FC", y = "p_val_adj", pCutoff = 0.05, FCcutoff = 0.75, title = "Differential expression between Uninjured and Acute conditions", drawConnectors = T, labSize = 3)
 
-ggsave("~/R/Figures/Volcano2_1dpi.png", volcanoplot2, dpi = 1080, height = 7, width = 9)
+ggsave("~/R/Figures/Volcano_1dpi.png", volcanoplot2, dpi = 1080, height = 7, width = 9)
 
 write.xlsx(DEG2, "~/R/Data/DEG_FirstDay.xlsx")
 
@@ -684,8 +586,10 @@ volcano_plot3 <- ggplot(DEG_matrisome, aes(x = avg_log2FC, y = -log10(p_val_adj)
 
 volcano_plot3
 
-ggsave("~/R/Figures/Volcano3_Acute.png", volcano_plot3, dpi = 1080, height = 7, width = 9)
+ggsave("~/R/Figures/Volcano_ECM_Acute.png", volcano_plot3, dpi = 1080, height = 7, width = 9)
 ```
+
+7dpi
 
 Enrichment analysis
 
@@ -726,10 +630,10 @@ go_enrich_barplot <- barplot(filtered_go_enrich) +
   ggtitle("GO ENRICHMENT ANALYSIS OF DEG - 7dpi") + labs(caption = "GO Terms Filtered by Spinal Cord Injury related Biological Process")
 go_enrich_barplot
 
-ggsave("~/R/Figures/goenrich_Acute.png", go_enrich_barplot, dpi = 1080, height = 7, width = 9)
+ggsave("~/R/Figures/Enrichment_Analysis_Acute.png", go_enrich_barplot, dpi = 1080, height = 7, width = 9)
 ```
 
-For different cell types
+For different cell types 
 
 Dotplot
 
@@ -738,12 +642,12 @@ Dotplot
 DEG$baseline_exp <- 0
 
 DEG_upregulated <- DEG %>%
-  arrange(desc(avg_log2FC)) %>% head(10)
+  arrange(desc(avg_log2FC)) %>% head(15)
 
 DEG_downregulated <- DEG %>%
-  arrange(desc(avg_log2FC)) %>% tail(10)
+  arrange(desc(avg_log2FC)) %>% tail(15)
 
-DEG_TOP <- merge(DEG_downregulated, DEG_upregulated)
+DEG_TOP <- bind_rows(DEG_downregulated, DEG_upregulated)
 
 # DOTPLOT
 genes_interest <- c(DEG_upregulated$Gene, DEG_downregulated$Gene)
@@ -751,7 +655,7 @@ genes_interest <- c(DEG_upregulated$Gene, DEG_downregulated$Gene)
 seurat_integrated_ME@meta.data$time <- factor(seurat_integrated_ME@meta.data$time)
 seurat_integrated_ME@meta.data$celltype <- factor(seurat_integrated_ME@meta.data$celltype)
 
-celltype_DEG <- DotPlot(seurat_integrated_ME, features = unique(genes_interest), group.by = "celltype", split.by = "time", dot.scale = 5, cols = c("red","blue")) + theme_minimal() + labs(title = "Differential Expression of Genes by Time and Cell Type") + theme(axis.text.x = element_text(angle = 45, hjust = 1))
+celltype_DEG <- DotPlot(seurat_integrated_ME, features = unique(genes_interest), group.by = "celltype", split.by = "time", dot.scale = 5, cols = c("red","green", "blue")) + theme_minimal() + labs(title = "Differential Expression of Genes by Time and Cell Type") + theme(axis.text.x = element_text(angle = 45, hjust = 1))
 celltype_DEG
 
 ggsave("~/R/Figures/DotPlot_Acute.png", celltype_DEG, dpi = 1080, height = 10, width = 9)
@@ -793,7 +697,7 @@ DEG_oligodendrocyte <- FindMarkers(oligodendrocyte, ident.1 = "7dpi", ident.2 = 
 DEG_oligodendrocyte$Gene <- rownames(DEG_oligodendrocyte)
 DEG_oligodendrocyte$celltype <- "Oligodendrocytes"
 
-combined_results <- bind_rows(DEG_astro, DEG_neuron, DEG_microglia, DEG_opc, DEG_oligodendrocyte)
+combined_results <- bind_rows(DEG_astro, DEG_neuron, DEG_microglia, DEG_opc, DEG_oligodendrocyte, DEG_endothelial)
 
 genes_up <- DEG_upregulated$Gene
 genes_down <- DEG_downregulated$Gene
@@ -815,92 +719,133 @@ heatmap <- Heatmap(
   col = circlize::colorRamp2(c(-7, 0, 7), c("blue", "white", "red")),
   row_names_gp = gpar(fontsize = 8),
   column_names_gp = gpar(fontsize = 8),
-  name = "log2FC"
+  name = "log2FC", row_title = "Genes", row_title_side = "right", column_title = "Cell types", column_title_side = "bottom"
 )
 
 heatmap
 
-ggsave("~/R/Figures/Heatmap_Acute.png", heatmap, dpi = 1080, height = 7, width = 14)
 ```
 
-Venn-Diagramms
+For 1 dpi
+
+Enrichment analysis
 
 ```{r}
 
-transcriptomic <- DEG %>% 
-  filter(abs(DEG$avg_log2FC) > 0.75)
-transcriptomic <- transcriptomic$Gene
+relevant_genes2 <- subset(DEG2, p_val_adj < 0.05 & abs(avg_log2FC) > 0.75)
 
-proteomic <- proteins.ME %>%
-  filter(expr_Adjpval_Acute_Ctrl == "up" | expr_Adjpval_Acute_Ctrl == "down" )
-proteomic <- proteomic$Gene
+relevant_genes2 <- rownames(relevant_genes2)
 
-x = list("Differentially expressed genes" = transcriptomic,"Differential protein levels" = proteomic)
+deg_entrez2 <- bitr(relevant_genes2, fromType = "SYMBOL", toType = "ENTREZID", OrgDb = org.Mm.eg.db)
+deg_entrez2 <- deg_entrez2$ENTREZID
 
-venn_diagram <- ggvenn(x, fill_color = c("salmon", "lightgreen"), show_elements = F, text_size = 5, set_name_size = 5)
-venn_diagram
+# GO ENRICHMENT
+go_enrich2 <- enrichGO(
+  gene = deg_entrez2,
+  OrgDb = org.Mm.eg.db,
+  keyType = "ENTREZID", 
+  ont = "BP"
+)
 
-ggsave("~/R/Figures/Venn_Acute.png", venn_diagram, dpi = 1080, height = 7, width = 9)
+go_terms2 <- go_enrich2@result[["Description"]]
 
-intersection <- intersect(proteomic, transcriptomic)
-paste(intersection,"is differentially expressed in both transcrit and protein levels when we compare uninjured and sub-chronic conditions")
+keywords <- c("neuro", "inflammation", "Wnt", "Rho", "regeneration", "remodelling", "SCI", "axonal", "axon","BMP", "spinal")
+
+terms_of_interest <- go_terms2[sapply(go_terms2, function(x) any(grepl(paste(keywords, collapse="|"), x, ignore.case = TRUE)))]
+
+terms_of_interest <- terms_of_interest[!grepl("muscle", terms_of_interest, ignore.case = TRUE)]
+
+go_enrich_df2 <- as.data.frame(go_enrich2@result)
+
+filtered_go_enrich_df2 <- go_enrich_df2 %>% filter(Description %in% terms_of_interest)
+
+filtered_go_enrich2 <- go_enrich2
+filtered_go_enrich2@result <- filtered_go_enrich_df2  
+
+go_enrich_barplot2 <- barplot(filtered_go_enrich2) + 
+  theme(axis.text.y = element_text(size = 9)) + 
+  ggtitle("GO ENRICHMENT ANALYSIS OF DEG - 1dpi") + labs(caption = "GO Terms Filtered by Spinal Cord Injury related Biological Process")
+
+go_enrich_barplot2
+
+ggsave("~/R/Figures/Enrichment_Analysis_FirstDay.png", go_enrich_barplot2, dpi = 1080, height = 7, width = 9)
 ```
 
-Correlation matrix
+
 
 ```{r}
-transcriptomic <- DEG
-transcriptomic <- transcriptomic [, c("Gene", "avg_log2FC","p_val_adj")]
 
-proteomic <- proteins.ME
-proteomic <- proteomic [, c("Gene", "logFC_Acute_Ctrl", "adj.P.Val_Acute_Ctrl")]
+DEG2$baseline_exp <- 0
 
-correlation_table <- merge(transcriptomic, proteomic, by = "Gene", all = T)
+DEG_upregulated2 <- DEG2 %>%
+  arrange(desc(avg_log2FC)) %>% head(15)
 
-colnames(correlation_table)[2] <- "log2FC_Transcriptomics"
-colnames(correlation_table)[3] <- "p_value_Transcriptomics"
-colnames(correlation_table)[4] <- "log2FC_Proteomics"
-colnames(correlation_table)[5] <- "p_value_Proteomics"
+DEG_downregulated2 <- DEG2 %>%
+  arrange(desc(avg_log2FC)) %>% tail(15)
 
-correlation_table$log2FC_Transcriptomics[is.na(correlation_table$log2FC_Transcriptomics)] <- 0
-correlation_table$p_value_Transcriptomics[is.na(correlation_table$p_value_Transcriptomics)] <- 1
-
-correlation_table$log2FC_Proteomics <- as.numeric(correlation_table$log2FC_Proteomics)
-correlation_table$p_value_Proteomics <- as.numeric(correlation_table$p_value_Proteomics)
-
-correlation_table <- correlation_table %>% 
-  mutate(Tendence = case_when(
-    log2FC_Transcriptomics > 0.75 & log2FC_Proteomics > 0.75 ~ "Both upregulated",
-    log2FC_Transcriptomics < -0.75 & log2FC_Proteomics < -0.75 ~ "Both downregulated",
-    log2FC_Transcriptomics > 0.75 & log2FC_Proteomics < -0.75 ~ "Transcriptomics ↑, Proteomics ↓",
-    log2FC_Transcriptomics < -0.75 & log2FC_Proteomics > 0.75 ~ "Transcriptomics ↓, Proteomics ↑",
-    TRUE ~ "Neutral" 
-  ))
-
-correlation_table <- correlation_table %>% 
-  filter(p_value_Proteomics < 0.05 & p_value_Transcriptomics < 0.05)
-
-correlation <- ggplot(correlation_table, aes(x = log2FC_Transcriptomics, y = log2FC_Proteomics, label = Gene)) +
-  geom_point(aes(color = Tendence), size = 3, alpha = 0.7) +  
-  geom_text_repel(aes(color = Tendence), size = 3) +  
-  geom_smooth(method = "lm", color = "red", se = FALSE) +  
-  theme_minimal() +
-  labs(title = "Relationship between Gene Expression and Protein Levels",
-       x = "log2FC Transcriptomics",
-       y = "log2FC Proteomics") +
-  scale_color_manual(values = c(
-    "Both upregulated" = "green",
-    "Both downregulated" = "red",
-    "Transcriptomics ↑, Proteomics ↓" = "grey40",
-    "Transcriptomics ↓, Proteomics ↑" = "grey20",
-    "Neutral" = "grey10"
-  )) +
-  theme(legend.position = "bottom")
-correlation
-ggsave("~/R/Figures/Corr_Acute.png", correlation, dpi = 1080, height = 7, width = 9)
+DEG_TOP2 <- bind_rows(DEG_downregulated2, DEG_upregulated2)
 
 ```
 
+HeatMap
+
+```{r}
+Idents(seurat_integrated_ME) <- "time"
+
+DEG_astro2 <- FindMarkers(astro, ident.1 = "1dpi", ident.2 = "Uninjured", logfc.threshold = 0, min.pct = 0.05, test.use = "MAST")
+DEG_astro2$Gene <- rownames(DEG_astro2)
+DEG_astro2$celltype <- "Astrocytes"
+
+DEG_neuron2 <- FindMarkers(neuron, ident.1 = "1dpi", ident.2 = "Uninjured", logfc.threshold = 0, min.pct = 0.05, test.use = "MAST")
+DEG_neuron2$Gene <- rownames(DEG_neuron2)
+DEG_neuron2$celltype <- "Neurons"
+
+DEG_microglia2 <- FindMarkers(microglia, ident.1 = "1dpi", ident.2 = "Uninjured", logfc.threshold = 0, min.pct = 0.05, test.use = "MAST")
+DEG_microglia2$Gene <- rownames(DEG_microglia2)
+DEG_microglia2$celltype <- "Microglia"
+
+DEG_opc2 <- FindMarkers(opc, ident.1 = "1dpi", ident.2 = "Uninjured", logfc.threshold = 0, min.pct = 0.05, test.use = "MAST")
+DEG_opc2$Gene <- rownames(DEG_opc2)
+DEG_opc2$celltype <- "OPCs"
+
+DEG_endothelial2 <- FindMarkers(endothelial, ident.1 = "1dpi", ident.2 = "Uninjured", logfc.threshold = 0, min.pct = 0.05, test.use = "MAST")
+DEG_endothelial2$Gene <- rownames(DEG_endothelial2)
+DEG_endothelial2$celltype <- "Endothelial"
+
+DEG_oligodendrocyte2 <- FindMarkers(oligodendrocyte, ident.1 = "1dpi", ident.2 = "Uninjured", logfc.threshold = 0, min.pct = 0.05, test.use = "MAST")
+DEG_oligodendrocyte2$Gene <- rownames(DEG_oligodendrocyte2)
+DEG_oligodendrocyte2$celltype <- "Oligodendrocytes"
+
+combined_results2 <- bind_rows(DEG_astro2, DEG_neuron2, DEG_microglia2, DEG_opc2, DEG_oligodendrocyte2, DEG_endothelial2)
+
+genes_up <- DEG_upregulated2$Gene
+genes_down <- DEG_downregulated2$Gene
+
+combined_results2 <- combined_results2 %>%
+  filter(Gene %in% genes_down | Gene %in% genes_up)
+
+heatmap_data2 <- combined_results2 %>%
+  select(Gene, celltype, avg_log2FC) %>%
+  pivot_wider(names_from = celltype, values_from = avg_log2FC) %>%
+  column_to_rownames("Gene") %>%
+  as.matrix()
+
+heatmap_data2[is.na(heatmap_data2)] <- 0
+
+order <- c("Endothelial","Microglia", "OPCs", "Astrocytes", "Neurons", "Oligodendrocytes")
+
+heatmap_data2 <- heatmap_data2 [, order ]
+
+library(ComplexHeatmap)
+heatmap2 <- Heatmap(
+  heatmap_data2,
+  col = circlize::colorRamp2(c(-7, 0, 7), c("blue", "white", "red")),
+  row_names_gp = gpar(fontsize = 8),
+  column_names_gp = gpar(fontsize = 8),
+  name = "log2FC", row_title = "Genes", row_title_side = "right", column_title = "Cell types", column_title_side = "bottom", use_raster = T, raster_quality = 5, raster_device = "png"
+)
+
+heatmap2
 
 
-
+```
